Fri May 31 23:56:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (calc_hbase): Extracted from rb_big2str0.

Fri May 31 23:22:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Don't hard code SIZEOF_BDIGITS for log_base(hbase).
	  (big2str_orig): hbase_numdigits argument added.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str0): Calculate hbase_numdigits.

Fri May 31 17:57:21 2013  Zachary Scott  <zachary@zacharyscott.net>

	* process.c: Improve Process::exec documentation

Fri May 31 17:26:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_funcallv): add better names of rb_funcall2.

	* vm_eval.c (rb_funcallv_public): ditto for rb_funcall3.

Fri May 31 17:04:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_new_capa): add better names of rb_ary_new2.

	* array.c (rb_ary_new_from_args): ditto for rb_ary_new3.

	* array.c (rb_ary_new_from_values): ditto for rb_ary_new4.

Fri May 31 16:35:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (HAVE_ATTRIBUTE_FUNCTION_ALIAS): define to tell if
	  alias attribute is available.

Fri May 31 16:03:23 2013  Zachary Scott  <zachary@zacharyscott.net>

	* object.c, proc.c: s/call_seq/call-seq in rdoc. [Fix GH-322]

Fri May 31 15:56:36 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/openssl/ossl_ssl.c: Add missing paren in rdoc [Fix GH-321]

Fri May 31 11:58:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (set_visibility): extract from rb_mod_public(),
	  rb_mod_protected() and rb_mod_private().

Tue May 28 12:31:21 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c: fix a bug reported at
	  "[ruby-core:55182] [ruby-trunk - Bug #8456][Open] Sugfault in Ruby Head"
	  Care about the case TracePoint#path #=> `nil'.

	* ext/objspace/object_tracing.c: add two new methods:
	  * ObjectSpace.allocation_class_path(o)
	  * ObjectSpace.allocation_method_id(o)
	  They are not useful for Object.new because they are always
	  "Class" and :new.